--- a/code.ipynb
+++ b/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,75 +21,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
-    "chosen_column = [0] + [i for i in range(3, 15)] + [all_dataset.columns[-1]]\n",
+    "#chosen_column = [0] + [i for i in range(3, 15)] + [all_dataset.columns[-1]]\n",
+    "chosen_column = [0] + [i for i in range(3, 13)] + [14] + [all_dataset.columns[-1]]\n",
     "max_trash = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     0    3    4    5    6    7    8    9    10   11   12   13  14   279\n",
-      "0     75   80   91  193  371  174  121  -16   13   64   -2    ?  63    8\n",
-      "1     56   64   81  174  401  149   39   25   37  -17   31    ?  53    6\n",
-      "2     54   95  138  163  386  185  102   96   34   70   66   23  75   10\n",
-      "3     55   94  100  202  380  179  143   28   11   -5   20    ?  71    1\n",
-      "4     75   80   88  181  360  177  103  -16   13   61    3    ?   ?    7\n",
-      "..   ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ..  ...\n",
-      "447   53   70   80  199  382  154  117  -37    4   40  -27    ?  63    1\n",
-      "448   37   85  100  137  361  201   73   86   66   52   79    ?  73   10\n",
-      "449   36   68  108  176  365  194  116  -85  -19  -61  -70   84  84    2\n",
-      "450   32   55   93  106  386  218   63   54   29  -22   43  103  80    1\n",
-      "451   78   70   79  127  364  138   78   28   79   52   47    ?  75    1\n",
-      "\n",
-      "[452 rows x 14 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "dataset = all_dataset[chosen_column]\n",
-    "print(dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean_data(data):\n",
     "    for col in data.columns:\n",
-    "        trash_row = (data[col] == '?')\n",
-    "        good_row = (data[col] != '?')\n",
+    "        trash_row = (data[col] == \"?\")\n",
+    "        good_row = (data[col] != \"?\")\n",
     "        if sum(trash_row) < max_trash:\n",
     "            data = data[good_row]\n",
     "        else:\n",
     "            aver =  pd.to_numeric(data[good_row][col]).mean()\n",
     "            data.loc[trash_row, col] = aver\n",
     "        data[col] = pd.to_numeric(data[col])\n",
-    "        data[col] -= 2*data[col].min()\n",
+    "        data[col] -= data[col].min()\n",
     "    return data\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#use standart skleaarn func or use your own\n",
+    "#from sklearn.model_selection import train_test_split\n",
+    "#X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20)\n",
+    "\n",
+    "#also could be a good idea to do feature scaling\n",
+    "#from sklearn.preprocessing import StandardScaler\n",
+    "#scaler = StandardScaler()\n",
+    "#scaler.fit(X_train)\n",
+    "\n",
+    "#X_train = scaler.transform(X_train)\n",
+    "#X_test = scaler.transform(X_test)\n",
+    "#see more on https://stackabuse.com/k-nearest-neighbors-algorithm-in-python-and-scikit-learn/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "def split_train_test(df):\n",
     "    margin = int(0.8 * len(df))\n",
-    "    print(margin)\n",
     "    df = df.sample(frac=1)\n",
     "    train = df.iloc[:margin]\n",
     "    test = df.iloc[margin:]\n",
@@ -98,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,57 +98,166 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GaussianNB = 0.658  || 0.5\n",
+    "ComplementNB = 0.536 || 0.48\n",
+    "MultinomialNB = 0.47  || 0.43\n",
+    "\n",
+    "if delete almost emply column № 13(14), results become better\n",
+    "GaussianNB = 0.6832  || 0.6\n",
+    "ComplementNB = 0.5226 || 0.49\n",
+    "MultinomialNB = 0.5  || 0.45"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import naive_bayes\n",
+    "\n",
+    "def bayes_classifier(which='gaussian'):\n",
+    "    classifier = {\n",
+    "        'gaussian' : naive_bayes.GaussianNB(),\n",
+    "        'complement' : naive_bayes.ComplementNB(),\n",
+    "        'multinomial' : naive_bayes.MultinomialNB()\n",
+    "    }\n",
+    "    clf = classifier[which]\n",
+    "    return clf    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_accuracy(data, classifier, num_iter=1000):\n",
+    "    accuracy = []\n",
+    "    for i in range(1000):\n",
+    "        train_data, test_data = split_train_test(clean_dataset)\n",
+    "        train_x, train_y = from_data_to_xy(train_data)\n",
+    "        test_x, test_y = from_data_to_xy(test_data)\n",
+    "        #clf = bayes_classifier(train_x, train_y, which)\n",
+    "        clf = classifier.fit(train_x, train_y)\n",
+    "        accuracy.append(sum(clf.predict(test_x) == test_y)  / test_y.shape[0])\n",
+    "    #print(np.mean(accuracy))\n",
+    "    return accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = all_dataset[chosen_column]\n",
+    "clean_dataset = clean_data(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0,)\n"
+      "0.4391573033707865\n"
      ]
     }
    ],
    "source": [
-    "clean_dataset = clean_data(dataset)\n",
-    "x = np.array(clean_dataset[clean_dataset.columns[:-1]], dtype=float)\n",
-    "y = np.array(clean_dataset[clean_dataset.columns[-1]], dtype=float)\n",
-    "print(x[x<0].shape)"
+    "which = 'multinomial'\n",
+    "\n",
+    "ac = check_accuracy(clean_data, bayes_classifier(which), 1000)\n",
+    "print(np.mean(ac))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "GaussianNB = 0.658\n",
-    "ComplementNB = 0.536\n",
-    "MultinomialNB = 0.47"
+    "knn:\n",
+    "5     0.5802134831460674\n",
+    "6     0.5839887640449437\n",
+    "7     0.5853932584269662\n",
+    "8     0.5837415730337078\n",
+    "9     0.5767640449438202\n",
+    "10     0.5775393258426966\n",
+    "11     0.569752808988764\n",
+    "12     0.5705056179775281\n",
+    "13     0.5678651685393259\n",
+    "\n",
+    "knn with all columns:\n",
+    "5     0.5801235955056179\n",
+    "6     0.584\n",
+    "7     0.5836179775280897\n",
+    "8     0.5845842696629213\n",
+    "9     0.5774494382022471\n",
+    "10     0.574876404494382\n",
+    "11     0.5708988764044943\n",
+    "12     0.570820224719101\n",
+    "13     0.5677303370786517\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5361990950226244\n"
+      "5     0.5802134831460674\n",
+      "6     0.5839887640449437\n",
+      "7     0.5853932584269662\n",
+      "8     0.5837415730337078\n",
+      "9     0.5767640449438202\n",
+      "10     0.5775393258426966\n",
+      "11     0.569752808988764\n",
+      "12     0.5705056179775281\n",
+      "13     0.5678651685393259\n"
      ]
     }
    ],
    "source": [
-    "#from sklearn.naive_bayes import GaussianNB\n",
-    "#clf = GaussianNB()\n",
-    "#from sklearn.naive_bayes import MultinomialNB\n",
-    "#clf = MultinomialNB()\n",
-    "from sklearn.naive_bayes import ComplementNB\n",
-    "clf = ComplementNB()\n",
-    "clf.fit(x, y)\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "classifier = KNeighborsClassifier(n_neighbors=13)\n",
     "\n",
-    "print(sum(clf.predict(x) == y)  / y.shape[0])"
+    "for i in range(5,14):\n",
+    "    knn_classifier = KNeighborsClassifier(n_neighbors=i)\n",
+    "    ac = check_accuracy(clean_data, knn_classifier, 1000)\n",
+    "    print(i, \"   \", np.mean(ac))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({0.0: 243, 9.0: 50, 1.0: 39, 5.0: 25, 15.0: 21, 2.0: 15, 3.0: 14, 4.0: 13, 8.0: 9, 14.0: 5, 13.0: 4, 7.0: 2, 6.0: 2})\n",
+      "[ 0.  1.  2.  3.  4.  5.  6.  7.  8.  9. 13. 14. 15.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "\n",
+    "_, y_ = from_data_to_xy(clean_dataset)\n",
+    "\n",
+    "print(collections.Counter(y))\n",
+    "\n",
+    "print(np.unique(y))"
    ]
   },
   {
@@ -172,9 +270,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -186,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
