add uni version

--- a/knn_svm_naive_bayes/code.ipynb
+++ b/knn_svm_naive_bayes/code.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Гаврюшенко Анастасия\n",
     "## Статистика, 6 курс\n",
-    "### Вариант 3. Сердечно-сосудистые заболевания"
+    "### Вариант 3. Dataset: cердечно-сосудистые заболевания"
    ]
   },
   {
