--- a/code.ipynb
+++ b/code.ipynb
@@ -1,11 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Гаврюшенко Анастасия\n",
+    "## Статистика, 6 курс\n",
+    "### Вариант 3. Dataset: cердечно-сосудистые заболевания"
+   ]
   },
   {
    "cell_type": "code",
