--- a/knn_svm_naive_bayes/code.ipynb
+++ b/knn_svm_naive_bayes/code.ipynb
@@ -1,15 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Гаврюшенко Анастасия\n",
-    "## Статистика, 6 курс\n",
-    "### Вариант 3. Сердечно-сосудистые заболевания"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -32,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### use to choose columns to get from dataframe:"
+    "##### choose columns to get from dataframe:"
    ]
   },
   {
@@ -42,7 +33,6 @@
    "outputs": [],
    "source": [
     "chosen_column = [0] + [i for i in range(3, 15)] + [all_dataset.columns[-1]]\n",
-    "#chosen_column = [0] + [i for i in range(3, 13)] + [14] + [all_dataset.columns[-1]]\n",
     "max_trash = 20"
    ]
   },
@@ -50,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### use to filter data and remove invalide symbols '?'"
+    "##### ilter data and remove invalide symbols '?'"
    ]
   },
   {
@@ -78,26 +68,6 @@
    "metadata": {},
    "source": [
     "##### instruction how to use default sklearn tools to split samples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#use standart skleaarn func or use your own\n",
-    "#from sklearn.model_selection import train_test_split\n",
-    "#X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20)\n",
-    "\n",
-    "#also could be a good idea to do feature scaling\n",
-    "#from sklearn.preprocessing import StandardScaler\n",
-    "#scaler = StandardScaler()\n",
-    "#scaler.fit(X_train)\n",
-    "\n",
-    "#X_train = scaler.transform(X_train)\n",
-    "#X_test = scaler.transform(X_test)\n",
-    "#see more on https://stackabuse.com/k-nearest-neighbors-algorithm-in-python-and-scikit-learn/"
    ]
   },
   {
@@ -477,7 +447,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#chosen_factor_column = [0, 1] + [i for i in range(3, 13)] + [14] + [all_dataset.columns[-1]]\n",
     "chosen_factor_column = [0, 1] + [i for i in range(3, 15)] + [all_dataset.columns[-1]]"
    ]
   },
